--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
     "@ai-sdk/openai": "^1.2.2",
     "@ai-sdk/react": "^1.1.21",
     "@aptos-labs/ts-sdk": "^1.35.0",
+    "@aptos-labs/wallet-adapter-react": "^4.1.2",
+    "@radix-ui/react-collapsible": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@tanstack/react-query": "^5.67.3",
     "ai": "^4.1.54",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -20,8 +26,9 @@
     "motion": "^12.5.0",
     "next": "15.2.2",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
