--- a/package.json
+++ b/package.json
@@ -13,10 +13,17 @@
     "@ai-sdk/react": "^1.1.21",
     "@aptos-labs/ts-sdk": "^1.35.0",
     "@aptos-labs/wallet-adapter-react": "^4.1.2",
+    "@prisma/client": "^6.5.0",
+    "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-collapsible": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-radio-group": "^1.2.3",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
+    "@supabase/supabase-js": "^2.49.1",
     "@tanstack/react-query": "^5.67.3",
     "ai": "^4.1.54",
     "class-variance-authority": "^0.7.1",
