--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lucide-react": "^0.479.0",
     "marked": "^15.0.7",
     "motion": "^12.5.0",
+    "move-agent-kit": "^0.2.0",
     "next": "15.2.2",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
