--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
   },
   "optionalDependencies": {
     "@tailwindcss/oxide-linux-arm64-gnu": "^4.0.1",
-    "@tailwindcss/oxide-linux-x64-gnu": "^4.0.1"
+    "@tailwindcss/oxide-linux-x64-gnu": "^4.0.1",
+    "lightningcss-linux-x64-gnu": "^1.29.1"
   }
 }
